[package]
name = "argonic"
version = "0.1.0"
edition = "2021"
description = "Tower compatible implementation of JSON-RPC 2.0"
license = "MIT OR Apache-2.0"
authors = ["Garett Cooper <garett@garettcooper.com>"]
readme = "README.md"
homepage = "https://github.com/GarettCooper/argonic"
repository = "https://github.com/GarettCooper/argonic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
